Remove debug, fix CSS alignment

--- a/assets/css/tools-menu.css
+++ b/assets/css/tools-menu.css
@@ -70,6 +70,10 @@
     padding: 0.1em;
 }
 
+select.optiongroup {
+    display: inline-block;
+}
+
 .filter-section details fieldset {
     display: inline;
 }
